--- a/musty_cv.bib
+++ b/musty_cv.bib
@@ -1,5 +1,11 @@
 % Encoding: UTF-8
 
+@unpublished{twogroups,
+  title={$2$-Group Belyi Maps},
+  author={Musty, Michael},
+  year={in progress}
+}
+
 @article{belyi,
   title={Numerical calculation of three-point branched covers of the projective line},
   author={Klug, Michael and Musty, Michael and Schiavone, Sam and Voight, John},
