--- a/musty_cv.bib
+++ b/musty_cv.bib
@@ -1,9 +1,9 @@
 % Encoding: UTF-8
 
-@unpublished{twogroups,
+@article{twogroups,
   title={$2$-Group Belyi Maps},
   author={Musty, Michael},
-  year={in progress}
+  year={2019}
 }
 
 @article{belyi,
