--- a/musty_cv.tex
+++ b/musty_cv.tex
@@ -24,7 +24,7 @@
 
 \section{Education}{
   \begin{adcvtabletwo}
-    \adcvrowtwo{\textbf{Ph.D. Mathematics}, Dartmouth College, Hanover, New Hampshire, USA}{June 2019}
+    \adcvrowtwo{\textbf{Ph.D. Mathematics}, Dartmouth College, Hanover, New Hampshire, USA}{expected 2019}
     \adcvrowskip
     \adcvrowtwo{\textbf{M.Sc. Mathematics}, University of Vermont, Burlington, Vermont, USA}{2014}
     \adcvrowskip
@@ -34,37 +34,92 @@
 
 \section{Research Experience}{
   \begin{adcvtabletwo}
-    \adcvrowtwo{\textbf{Senior Cloud Advisor}, EVRY Cloud Services, Oslo, Norway}{2017--}
-    \adcvrowmulti{}
+    \adcvrowtwo{\textbf{$2$-Group Belyi Maps}, Ph.D. Thesis}{expected 2019}
+    \adcvrowmulti{TODO}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{A Database of Belyi Maps}, Co-author}{2018}
+    \adcvrowmulti{TODO}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Understanding the cost of dermatologic care: A survey study of dermatology providers,
+    residents, and patients}, Co-author}{2017}
+    \adcvrowmulti{TODO}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Numerical calculation of three-point branched covers of the projective line},
+    Co-author}{2014}
+    \adcvrowmulti{TODO}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Computing Iwasawa $\lambda$-Invariants},
+    M.Sc. Thesis}{2014}
+    \adcvrowmulti{TODO}
+    \adcvrowskip
     % \adcvrowtwo{\textbf{\href{http://www.arcadia-framework.eu}{ARCADIA}}, a framework for developing highly distributed applications}{2014--2016}
   \end{adcvtabletwo}
 }
 
 \section{Work Experience}{
+  \begin{adcvtabletwo}
+    \adcvrowtwo{\textbf{Graduate Research and Teaching Assistant},
+    Dartmouth College, Hanover, NH, USA}{2014-Present}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Graduate Research and Teaching Assistant},
+    University of Vermont, Burlington, VT, USA}{2012-2014}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Adjunct Professor},
+    Norwich University, Northfield, VT, USA}{2011-2013}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Seasonal Landscaper},
+    JM Landscaping, Bradford, VT, USA}{2000-2011}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Shipping Assistant},
+    Pleasant View Gardens, Loudon, NH, USA}{2009-2010}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Permanent Substitute Teacher},
+    Merrimack Valley High School, Penacook, NH, USA}{2009-2010}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Graduate Research and Teaching Assistant},
+    McGill University, Montreal, QC, Canada}{2008-2009}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Misc Laborer},
+    Glen Farm, Piermont, NH, USA}{1990-2000}
+  \end{adcvtabletwo}
 }
 
-\begin{comment}
 \section{Publications}{
-  \begin{refsection}
-    \nocite{twogroups}
-    \nocite{database}
-    \printbibliography[title={Preprints and Work in Progress}, heading=subbibliography]
-  \end{refsection}
+
   \begin{refsection}
     \nocite{ants}
-    \nocite{database}
     \nocite{aaron}
     \nocite{belyi}
     \printbibliography[title={Peer-Reviewed Articles}, heading=subbibliography]
   \end{refsection}
   % \href{https://scholar.google.com/citations?user=s1bqnpoAAAAJ}{30+ publications} in peer-reviewed conferences and journals.
 }
-\end{comment}
 
-\section{Presentations}{
+\section{Selected Talks}{
   \begin{adcvpresentations}
-    \adcvpresentation{title}{\href{url}{urltext}, Oslo, Norway, 12 May 2017}
+    \adcvpresentation{$2$-Group Belyi Maps}{\href{https://jointmathematicsmeetings.org/amsmtgs/2217_abstracts/1145-11-2469.pdf}{JMM Special Session on Number Theory, Arithmetic Geometry, and Computation}, Baltimore, MD, January 2019}
+    \adcvpresentation{A Database of Belyi Maps}{\href{https://math.mit.edu/~drew/2018Conference/SlidesMusty.pdf}{Simons Collaboration Short Talks}, Cambridge, MA, August 2018}
+    \adcvpresentation{$2$-Group Belyi Maps}{\href{https://archimede.mat.ulaval.ca/MAINE-QUEBEC/mq17.html}{Quebec Maine Number Theory Seminar}, October 2017}
+    \adcvpresentation{Computing Iwasawa $\lambda$-Invariants}{\href{https://www.math.dartmouth.edu/~zahlen/}{Dartmouth Number Theory Seminar}, Hanover, NH, February 2015}
   \end{adcvpresentations}
+}
+
+\section{Community}{
+
+  \begin{adcvtabletwo}
+    \adcvrowtwo{\textbf{Dartmouth Mathematics Youth Summer Program},
+    Guest Lecturer, Hanover, NH, USA}{2016}
+    \adcvrowmulti{TODO}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Johns Hopkins Program for Talented Youth},
+    Guest Lecturer, Hanover, NH, USA}{2015}
+    \adcvrowmulti{TODO}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Joshua M. Stimson Math Program},
+    Organizer, North Haverhill, NH, USA}{2011-2012}
+    \adcvrowmulti{TODO}
+    \adcvrowskip
+  \end{adcvtabletwo}
 }
 
 \end{document}
