--- a/musty_cv.tex
+++ b/musty_cv.tex
@@ -54,6 +54,23 @@
       \end{itemize}
     }
     \adcvrowskip
+    %\adcvrowtwo{\textbf{Computing TODO Homology}, Programmer}{2019}
+    %\adcvrowmulti{
+    %}
+    %\adcvrowskip
+    \adcvrowtwo{\textbf{Computing Canonical Rings of Hilbert Modular Forms}, Programmer}{2018}
+    \adcvrowmulti{
+      I worked on a large (10 person) team to implement techniques to compute
+      canonical rings of Hilbert modular forms.
+      I was responsible for the data structure to store and compute with
+      Fourier expansions of Hilbert modular forms
+      necessary to support these computations.
+      \begin{itemize}
+        \item
+          repository: \url{https://github.com/edgarcosta/hilbertmodularforms}
+      \end{itemize}
+    }
+    \adcvrowskip
     \adcvrowtwo{\textbf{A Database of Belyi Maps}, Co-author}{2018}
     \adcvrowmulti{
       In this paper,
@@ -115,6 +132,70 @@
     \printbibliography[title={Peer-Reviewed Articles}, heading=subbibliography]
   \end{refsection}
   % \href{https://scholar.google.com/citations?user=s1bqnpoAAAAJ}{30+ publications} in peer-reviewed conferences and journals.
+}
+
+\section{Selected Talks}{
+  \begin{adcvpresentations}
+    \adcvpresentation{2-Group Belyi Maps}{\href{https://jointmathematicsmeetings.org/amsmtgs/2217_abstracts/1145-11-2469.pdf}{JMM Special Session on Number Theory, Arithmetic Geometry, and Computation}, Baltimore, MD, January 2019}
+    \adcvpresentation{A Database of Belyi Maps}{\href{https://math.mit.edu/~drew/2018Conference/SlidesMusty.pdf}{Simons Collaboration Short Talks}, Cambridge, MA, August 2018}
+    \adcvpresentation{2-Group Belyi Maps}{\href{https://archimede.mat.ulaval.ca/MAINE-QUEBEC/mq17.html}{Quebec Maine Number Theory Seminar}, October 2017}
+    \adcvpresentation{Computing Iwasawa $\lambda$-Invariants}{\href{https://www.math.dartmouth.edu/~zahlen/}{Dartmouth Number Theory Seminar}, Hanover, NH, February 2015}
+  \end{adcvpresentations}
+}
+
+\section{Work Experience}{
+  \begin{adcvtabletwo}
+    \adcvrowtwo{\textbf{Graduate Research and Teaching Assistant},
+    Dartmouth College, Hanover, NH, USA}{2014-Present}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Graduate Research and Teaching Assistant},
+    University of Vermont, Burlington, VT, USA}{2012-2014}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Adjunct Professor},
+    Norwich University, Northfield, VT, USA}{2011-2013}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Seasonal Landscaper},
+    JM Landscaping, Bradford, VT, USA}{2000-2011}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Shipping Assistant},
+    Pleasant View Gardens, Loudon, NH, USA}{2009-2010}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Permanent Substitute Teacher},
+    Merrimack Valley High School, Penacook, NH, USA}{2009-2010}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Graduate Research and Teaching Assistant},
+    McGill University, Montreal, QC, Canada}{2008-2009}
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Misc Laborer},
+    Glen Farm, Piermont, NH, USA}{1990-2000}
+  \end{adcvtabletwo}
+}
+
+\section{Community}{
+
+  \begin{adcvtabletwo}
+    \adcvrowtwo{\textbf{Dartmouth Mathematics Youth Summer Program},
+    Guest Lecturer, Hanover, NH, USA}{2016}
+    \adcvrowmulti{
+      I gave four guest lectures on probability and knot theory
+      and helped organize this two week summer program.
+    }
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Johns Hopkins Program for Talented Youth},
+    Guest Lecturer, Hanover, NH, USA}{2015}
+    \adcvrowmulti{
+      I gave a guest lecture on group theory.
+    }
+    \adcvrowskip
+    \adcvrowtwo{\textbf{Joshua M. Stimson Math Program},
+    Organizer, North Haverhill, NH, USA}{2011-2012}
+    \adcvrowmulti{
+      I organized a four week long summer program
+      for advanced middle school students.
+      I was the organizer for the first two years of this summer program.
+    }
+    \adcvrowskip
+  \end{adcvtabletwo}
 }
 
 \section{Teaching Experience}
@@ -207,73 +288,10 @@ or summer programs.
     \end{itemize}
 \end{itemize}
 
-\section{Selected Talks}{
-  \begin{adcvpresentations}
-    \adcvpresentation{2-Group Belyi Maps}{\href{https://jointmathematicsmeetings.org/amsmtgs/2217_abstracts/1145-11-2469.pdf}{JMM Special Session on Number Theory, Arithmetic Geometry, and Computation}, Baltimore, MD, January 2019}
-    \adcvpresentation{A Database of Belyi Maps}{\href{https://math.mit.edu/~drew/2018Conference/SlidesMusty.pdf}{Simons Collaboration Short Talks}, Cambridge, MA, August 2018}
-    \adcvpresentation{2-Group Belyi Maps}{\href{https://archimede.mat.ulaval.ca/MAINE-QUEBEC/mq17.html}{Quebec Maine Number Theory Seminar}, October 2017}
-    \adcvpresentation{Computing Iwasawa $\lambda$-Invariants}{\href{https://www.math.dartmouth.edu/~zahlen/}{Dartmouth Number Theory Seminar}, Hanover, NH, February 2015}
-  \end{adcvpresentations}
-}
-
-\section{Work Experience}{
-  \begin{adcvtabletwo}
-    \adcvrowtwo{\textbf{Graduate Research and Teaching Assistant},
-    Dartmouth College, Hanover, NH, USA}{2014-Present}
-    \adcvrowskip
-    \adcvrowtwo{\textbf{Graduate Research and Teaching Assistant},
-    University of Vermont, Burlington, VT, USA}{2012-2014}
-    \adcvrowskip
-    \adcvrowtwo{\textbf{Adjunct Professor},
-    Norwich University, Northfield, VT, USA}{2011-2013}
-    \adcvrowskip
-    \adcvrowtwo{\textbf{Seasonal Landscaper},
-    JM Landscaping, Bradford, VT, USA}{2000-2011}
-    \adcvrowskip
-    \adcvrowtwo{\textbf{Shipping Assistant},
-    Pleasant View Gardens, Loudon, NH, USA}{2009-2010}
-    \adcvrowskip
-    \adcvrowtwo{\textbf{Permanent Substitute Teacher},
-    Merrimack Valley High School, Penacook, NH, USA}{2009-2010}
-    \adcvrowskip
-    \adcvrowtwo{\textbf{Graduate Research and Teaching Assistant},
-    McGill University, Montreal, QC, Canada}{2008-2009}
-    \adcvrowskip
-    \adcvrowtwo{\textbf{Misc Laborer},
-    Glen Farm, Piermont, NH, USA}{1990-2000}
-  \end{adcvtabletwo}
-}
-
-\section{Community}{
-
-  \begin{adcvtabletwo}
-    \adcvrowtwo{\textbf{Dartmouth Mathematics Youth Summer Program},
-    Guest Lecturer, Hanover, NH, USA}{2016}
-    \adcvrowmulti{
-      I gave four guest lectures on probability and knot theory
-      and helped organize this two week summer program.
-    }
-    \adcvrowskip
-    \adcvrowtwo{\textbf{Johns Hopkins Program for Talented Youth},
-    Guest Lecturer, Hanover, NH, USA}{2015}
-    \adcvrowmulti{
-      I gave a guest lecture on group theory.
-    }
-    \adcvrowskip
-    \adcvrowtwo{\textbf{Joshua M. Stimson Math Program},
-    Organizer, North Haverhill, NH, USA}{2011-2012}
-    \adcvrowmulti{
-      I organized a four week long summer program
-      for advanced middle school students.
-      I was the organizer for the first two years of this summer program.
-    }
-    \adcvrowskip
-  \end{adcvtabletwo}
-}
-
 \begin{figure}[ht]\label{fig:dessin}
   \centering
-  \includegraphics[scale=0.67]{32S2-g5.pdf}
+  %\includegraphics[scale=0.67]{32S2-g5.pdf}
+  \includegraphics[scale=0.4]{32S2-g5.pdf}
   \caption{
     A genus 5 dessin d'enfant drawn using \LaTeX and PSTricks.
   }
